<resources>
    <string name="app_name">Android Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="_1">1</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="t">T</string>
    <string name="answer_2">Answer 2</string>
    <string name="f">F</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="next">NEXT</string>
    <string name="time">Time:</string>
    <string name="_15s">15s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="finish">Finish</string>
    <string name="_50_">50%</string>
    <string name="start">Start</string>
    <string name="title_activity_last">LastActivity</string>
    <string name="questions_attempted">Questions attempted</string>
    <string name="quiz_finished_">RESULTS</string>
    <string name="_20">20</string>
    <string name="answered_correctly">Answered correctly</string>
    <string name="time_outs">Time outs</string>
    <string name="percentage">Percentage</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play again</string>
    <string name="response">Response</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_app_icon">The app icon</string>
    <string name="test_your_android_programming_knowledge">Test your Android programming knowledge</string>
    <string name="quiz_description">This test comprises 15 questions. Each question must be answered within 15 seconds or it will be skipped. You cannot pause the test or go back to finished questions but you can replay the test.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="view_answers">View Answers</string>
    <string name="android_board">android board</string>
    <string name="question_1">Question: 1</string>
    <string name="passed">Passed</string>
    <string name="what_is_the_most_popular_android_version">What is the most popular Android version?</string>
    <string name="your_answer">Your answer:</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="actual_answer">Actual answer:</string>
    <string name="nougat">Nougat</string>
</resources>