<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/the_app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:text="@string/app_name"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_your_android_programming_knowledge"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/android_teacher"
        android:contentDescription="@string/android_board" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:text="@string/quiz_description"/>

    <Button
        android:id="@+id/start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz" />
</LinearLayout>