<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:contentPadding="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionNumTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="15sp"
                android:text="@string/question_1"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/resultTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="15sp"
                android:text="@string/passed"/>

        </LinearLayout>

        <TextView
            android:id="@+id/questionTextTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"
            android:text="@string/what_is_the_most_popular_android_version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/your_answer"/>

        <TextView
            android:id="@+id/answerGivenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/marshmallow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/actual_answer"/>

        <TextView
            android:id="@+id/correctAnswerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/nougat"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>