<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/quiz_finished_"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_qns_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questions_attempted"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/bt_qns_all"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_answered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answered_correctly"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/bt_answered"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_timeOuts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_outs"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/bt_time_outs"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/bt_percentage"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/response"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/bt_result_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/view_answers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bt_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>
